# MPRPC

./: CMakeLists.txt  README.md  autobuild.sh
example/: friend.pb.cc  friend.pb.h  friend.proto  user.proto
example/callee/: CMakeLists.txt  friendservice.cc  main.cc  userservice.cc
example/caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc
explain/: 01.环境搭建.md  02.MprpcConfig模块.md  03.MprpcApplication模块.md  04.MprpcChannel模块.md  05.MprpcProvider模块.md  06.MprpcController模块.md  07.Logger模块.md  08.Zookeeperutil模块.md
lib/include/: logger.h  mprpcchannel.h
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  mprpcprovider.cc  rpcheader.proto  rpcprovider.cc  zookeeperutil.cc
src/include/: lockqueue.h  mprpcapplication.h  mprpcconfig.h  mprpccontroller.h  mprpcprovider.h  rpcprovider.h  zookeeperutil.h
test/: test.cpp
test/protobuf/: a.out  main.cc  test.pb.cc  test.pb.h  test.proto
